--- a/src/styles/modules/sidebar/sidebar.scss
+++ b/src/styles/modules/sidebar/sidebar.scss
@@ -1,68 +1,96 @@
 .sidebar {
-  width: 15rem;
-  background: linear-gradient(
-    to bottom,
-    rgba($primaryColor, 1),
-    rgba($secondaryColor, 0.7)
-  );
-  height: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  .brand {
-    color: #ffff;
+  height: 100%;
+  width: 25rem;
+  background-color: $color-primary;
+
+  //logo
+
+  .sidebar-logo {
+    border-bottom: 1px solid #ddd;
     position: relative;
-    top: 1rem;
-    font-size: 1.7rem;
-    line-height: 2rem;
-    font-weight: 300;
-    border-bottom: 1px solid #ccc;
-    .text-brand {
-      position: relative;
-      left: 2rem;
-      span {
-        display: block;
-        margin-left: 2rem;
-        font-weight: 400;
-        margin-bottom: 0.6rem;
+    height: 7rem;
+
+    a {
+      &:link,
+      &:focus,
+      &:visited,
+      &:active {
+        color: #fff;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 1.5rem;
+        font-weight: 500;
       }
     }
   }
 
-  ul {
+  & > ul {
     list-style: none;
-    margin-top: 3rem;
-
+    padding: 0;
+    margin: 0;
+    position: relative;
+    top: 0rem;
+    left: 2rem;
     li {
-      margin-top: 2rem;
-      padding: 0.5rem;
+      a {
+        height: 5rem;
+        &:link,
+        &:visited,
+        &:active {
+          position: relative;
+          width: 23rem;
+          padding: 1rem;
+          padding-top: 2rem;
+          display: block;
+          color: #fff;
+          font-size: 1.2rem;
+          letter-spacing: 2px;
+          margin-top: 1.5rem;
+          font-weight: 300;
+        }
+        &:hover,
+        &:focus {
+          background-color: rgba(#fff, 0.2);
+          text-decoration: none;
+        }
 
-      &:hover {
-        background-color: rgba(255, 255, 255, 0.1);
-        transform: translateY(-1px);
-        & a {
+        span {
+          line-height: 1;
+          display: block;
+          width: 100%;
+        }
+      }
+    }
+
+    ul {
+      list-style: none;
+      border-left: 1px solid #ddd;
+      padding: 0;
+      margin: 0;
+      margin-left: 2rem;
+      border-radius: 0.4rem;
+      & > li {
+        & > a {
+          height: 4rem;
           &:link,
-          &:active,
+          &:focus,
           &:visited,
-          &:focus {
-            color: #fff;
+          &:active {
+            width: 20.8rem;
+            margin-top: 1rem;
+            padding: 1rem;
           }
         }
       }
-      a {
-        &:link,
-        &:active,
-        &:visited,
-        &:focus {
-          color: rgba(255, 255, 255, 0.8);
-          text-decoration: none;
-          font-size: 1rem;
-        }
-      }
-      i {
-        color: #fff;
-        margin-right: 0.6rem;
-      }
     }
   }
+}
+
+.active {
+  background-color: rgba(#fff, 0.2);
 }
