--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,7 +1,7 @@
 @import "./modules/color/color.scss";
-@import "./modules/header.scss";
 @import "./modules/sidebar/sidebar.scss";
 @import "./modules/serch/search.scss";
 @import "./modules/navbar/navbar.scss";
 @import "./modules//util/util.scss";
 @import "./modules/form/form.scss";
+@import "./modules/global/global.scss";
