--- a/src/styles/modules/form/form.scss
+++ b/src/styles/modules/form/form.scss
@@ -3,7 +3,7 @@
   width: 100%;
   height: 3.3rem;
   padding: 0.4rem 0.75rem;
-  font-size: 1rem;
+  font-size: rem;
   font-weight: 400;
   line-height: 1.5;
   color: #495057;
@@ -26,4 +26,23 @@
     box-shadow: 0 0.2px 1px 0.5px rgba(black, 0.2);
     background-color: #fff !important;
   }
+}
+
+h2 {
+  font-weight: 300;
+}
+
+th {
+  font-weight: 400;
+}
+td {
+  font-weight: 300;
+}
+
+.form {
+  font-size: 1.3rem;
+}
+.btn {
+  font-size: 1.3rem;
+  width: 7rem;
 }
