--- a/src/styles/modules/serch/search.scss
+++ b/src/styles/modules/serch/search.scss
@@ -1,25 +1,28 @@
 .customeSearch {
-  visibility: visible;
-  display: inline-block;
+  display: block;
+  width: 100%;
+  height: 3rem;
+  padding: 0.4rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
   border: none;
   outline: none;
-  width: 30rem;
-  background-color: #f8f9fc !important;
-  padding: 0.3rem;
-  border-radius: 5px;
-  z-index: 999;
-  &:focus {
-    border-bottom: 1px solid #ccc;
-    box-shadow: 1px 5px 5px 1px rgba(58, 59, 69, 0.15) !important;
+  border-radius: 0.8rem;
+  box-shadow: none;
+  margin-top: 2rem;
+  border-bottom: 1px solid #ced4da;
+  transition: all 1s ease-in-out;
+  &:last-child {
+    margin-bottom: 0;
   }
-}
 
-.search-icon {
-  position: absolute;
-  top: 0.5rem;
-  right: 10rem;
-}
-
-.hide {
-  visibility: hidden;
+  &:focus,
+  &:visited {
+    box-shadow: none;
+    border-bottom: 1px solid #ced4da;
+    background-color: #fff !important;
+  }
 }
