40% of admin panale

--- a/src/styles/modules/form/form.scss
+++ b/src/styles/modules/form/form.scss
@@ -46,3 +46,23 @@ td {
   font-size: 1.3rem;
   width: 7rem;
 }
+.css-1f1x4zz-InputComponent {
+  text-transform: uppercase;
+}
+
+.css-3rj0br-ReactDropdownSelect {
+  height: auto;
+}
+
+.css-1niin65-DropDown {
+  height: 12rem;
+  overflow: hidden;
+}
+.css-bzznk3-DropDown {
+  height: 12rem;
+  overflow: hidden;
+}
+.form-input:focus,
+.form-input:visited,
+.form-input:hover {
+}
