--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -5,3 +5,5 @@
 @import "./modules//util/util.scss";
 @import "./modules/form/form.scss";
 @import "./modules/global/global.scss";
+@import "./modules/card/card.scss";
+@import "./modules/section/section.scss";
