--- a/src/styles/modules/util/util.scss
+++ b/src/styles/modules/util/util.scss
@@ -1,6 +1,13 @@
 .shadow {
   box-shadow: 0 0.15rem 1.75rem 0 rgba(58, 59, 69, 0.15) !important;
 }
+@mixin center() {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .center {
   position: absolute;
   top: 50%;
@@ -28,6 +35,10 @@
   background-clip: border-box;
   padding: 2rem;
   height: 500px;
+
+  &__full_height {
+    height: 100%;
+  }
 }
 
 .hide {
@@ -37,4 +48,24 @@
 .show {
   display: block;
   text-indent: 0;
+}
+
+.text-bold {
+  font-weight: 500;
+}
+
+.price {
+  font-size: 1.6rem;
+  font-weight: 500;
+  padding: 0.5rem;
+}
+
+.full-body {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background-color: rgba(#ffff, 0.8);
+  z-index: 89999;
+  top: 0;
+  left: 0;
 }
