--- a/src/styles/modules/navbar/navbar.scss
+++ b/src/styles/modules/navbar/navbar.scss
@@ -1,4 +1,4 @@
-.navbar {
+.Customenavbar {
   background: linear-gradient(90deg, #0c2646 0, #204065 60%, #2a5788);
   padding: 0 0 2rem 0rem;
   height: 168px;
