--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -7,3 +7,5 @@
 @import "./modules/global/global.scss";
 @import "./modules/card/card.scss";
 @import "./modules/section/section.scss";
+@import "./modules/loginform/loginform.scss";
+@import "./modules/usernavbar/usernavbar.scss";
