--- a/src/styles/modules/navbar/navbar.scss
+++ b/src/styles/modules/navbar/navbar.scss
@@ -1,5 +1,5 @@
 .Customenavbar {
-  background: linear-gradient(90deg, #0c2646 0, #204065 60%, #2a5788);
+  background: linear-gradient(40deg, #2a5788, #7873f5) !important;
   padding: 0 0 2rem 0rem;
   height: 168px;
   position: relative;
