--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,11 +1,22 @@
+@import "./modules//util/util.scss";
 @import "./modules/color/color.scss";
 @import "./modules/sidebar/sidebar.scss";
 @import "./modules/serch/search.scss";
 @import "./modules/navbar/navbar.scss";
-@import "./modules//util/util.scss";
 @import "./modules/form/form.scss";
 @import "./modules/global/global.scss";
 @import "./modules/card/card.scss";
 @import "./modules/section/section.scss";
 @import "./modules/loginform/loginform.scss";
 @import "./modules/usernavbar/usernavbar.scss";
+@import "./modules/bootbox/bootbox.scss";
+@import "./modules/section-card/section-card.scss";
+@import "./modules/info/info.scss";
+@import "./animate/animate.css";
+@import "./modules/account/account.scss";
+@import "./modules/btn/btn.scss";
+@import "./modules/section-large/section-larg.scss";
+@import "./modules/notificationModel/notificationModel.scss";
+@import "./modules/userSection/userSection.scss";
+@import "./modules/hero/hero.scss";
+@import "./modules/user-notice/user-notice.scss";
