--- a/src/styles/modules/card/card.scss
+++ b/src/styles/modules/card/card.scss
@@ -1,10 +1,9 @@
 .card {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   transition: all 0.3s ease-in-out;
-  display: flex;
-  margin-left: 3.5rem;
-  margin-top: 2rem;
-  height: 25rem;
+  margin-left: 8.5rem;
+  margin-top: 3.5rem;
+  height: 26rem;
   border-radius: 1rem;
   &-md {
     width: 25rem;
@@ -12,14 +11,19 @@
   &:hover {
     transform: translateY(-1px);
   }
+  @include global {
+    margin-left: 2rem;
+  }
 
   &-header {
-    height: 100%;
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 87%);
-    background: linear-gradient(90deg, #0c2646 0, #204065 60%, #224c79);
+    background: linear-gradient(40deg, #303f9f, #7873f5) !important;
     height: 15rem;
     color: #ffffff;
+    width: 101%;
     position: relative;
+    top: -2px;
+    left: -1px;
     &__title {
       margin-top: 2rem;
       font-size: 2rem;
@@ -93,4 +97,14 @@
 
 .flex {
   display: flex;
+  @include global {
+    display: block;
+  }
+}
+
+.btn-small {
+  width: 7rem;
+  font-size: 0.8rem;
+  float: right;
+  cursor: pointer;
 }
