--- a/src/styles/modules/sidebar/sidebar.scss
+++ b/src/styles/modules/sidebar/sidebar.scss
@@ -4,7 +4,7 @@
   left: 0;
   height: 100%;
   width: 25rem;
-  background-color: $color-primary;
+  background: linear-gradient(40deg, #7873f5, #303f9f) !important;
 
   //logo
 
@@ -35,7 +35,6 @@
     margin: 0;
     position: relative;
     top: 0rem;
-    left: 2rem;
     li {
       a {
         height: 5rem;
@@ -43,12 +42,12 @@
         &:visited,
         &:active {
           position: relative;
-          width: 23rem;
+          width: 25rem;
           padding: 1rem;
           padding-top: 2rem;
           display: block;
           color: #fff;
-          font-size: 1.2rem;
+          font-size: 1rem;
           letter-spacing: 2px;
           margin-top: 1.5rem;
           font-weight: 300;
@@ -93,4 +92,24 @@
 
 .active {
   background-color: rgba(#fff, 0.2);
+}
+
+.margin-let-de {
+  margin-left: -21px !important;
+}
+
+.fa-lg {
+  font-size: 1.5rem;
+}
+
+.text-right-icon {
+  float: right;
+  font-size: 1.5rem !important;
+  margin-top: -0.5rem;
+}
+
+.text-down-icon {
+  float: right;
+  font-size: 1.5rem !important;
+  margin-top: 0;
 }
