--- a/src/styles/modules/util/util.scss
+++ b/src/styles/modules/util/util.scss
@@ -1,75 +1,3 @@
-.shadow {
-  box-shadow: 0 0.15rem 1.75rem 0 rgba(58, 59, 69, 0.15) !important;
-}
-@mixin center() {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.center {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.hover {
-  cursor: pointer;
-}
-
-.section-card {
-  border: 0;
-  border-radius: 0.1875rem;
-  display: inline-block;
-  position: relative;
-  width: 100%;
-  margin-bottom: 20px;
-  box-shadow: 0 1px 15px 1px rgba(39, 39, 39, 0.1);
-  top: -100px;
-  flex-direction: column;
-  min-width: 0;
-  word-wrap: break-word;
-  background-color: #fff;
-  background-clip: border-box;
-  padding: 2rem;
-  height: 500px;
-
-  &__full_height {
-    height: 100%;
-  }
-}
-
-.hide {
-  display: none;
-  text-indent: -999;
-}
-.show {
-  display: block;
-  text-indent: 0;
-}
-
-.text-bold {
-  font-weight: 500;
-}
-
-.price {
-  font-size: 1.6rem;
-  font-weight: 500;
-  padding: 0.5rem;
-}
-
-.full-body {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  background-color: rgba(#ffff, 0.8);
-  z-index: 89999;
-  top: 0;
-  left: 0;
-}
-
 $glob: 1005px !default;
 $mq-mobile-landscape: 600px !default;
 $mq-tablet-portrait: 768px !default;
@@ -94,4 +22,96 @@ $mq-desktop: 1382px !default;
   @include global {
     margin-left: 0;
   }
+}
+
+.margin-top-lg {
+  margin-top: 10rem;
+  @include global {
+    margin-top: 0rem;
+  }
+}
+
+.shadow {
+  box-shadow: 0 0.15rem 1.75rem 0 rgba(58, 59, 69, 0.15) !important;
+}
+@mixin center() {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.full-width {
+  width: 100%;
+}
+
+.hover {
+  cursor: pointer;
+}
+
+.hide {
+  display: none;
+  text-indent: -999;
+}
+.show {
+  display: block;
+  text-indent: 0;
+}
+
+.text-bold {
+  font-weight: 700;
+}
+
+.price {
+  font-size: 1.6rem;
+  font-weight: 500;
+  padding: 0.5rem;
+}
+
+.full-body {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background-color: rgba(#ffff, 0.8);
+  z-index: 89999;
+  top: 0;
+  left: 0;
+}
+.top {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  @include global {
+    top: 60%;
+  }
+}
+
+.text-medium {
+  font-size: 1rem;
+}
+
+td {
+  padding: 0.5rem;
+  font-weight: 400 !important;
+}
+
+.text-sm {
+  font-size: 1.3rem;
+  letter-spacing: 2px;
+}
+
+.changePasswrod {
+  font-size: 1.2rem;
+  display: inline;
+  color: #17a2b8;
+  cursor: pointer;
 }
