--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -20,3 +20,4 @@
 @import "./modules/userSection/userSection.scss";
 @import "./modules/hero/hero.scss";
 @import "./modules/user-notice/user-notice.scss";
+@import "./modules/suggation/suggation.scss";
