--- a/src/styles/modules/section-card/section-card.scss
+++ b/src/styles/modules/section-card/section-card.scss
@@ -23,8 +23,7 @@
   background-color: #fff;
   background-clip: border-box;
   padding: 2rem;
-  height: 500px;
-
+  height: 100vh;
   &__full_height {
     height: 100%;
   }
