--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2,7 +2,7 @@
 @import "./modules/color/color.scss";
 @import "./modules/sidebar/sidebar.scss";
 @import "./modules/serch/search.scss";
-@import "./modules/navbar/navbar.scss";
+@import "./modules/main-nav/main-nav.scss";
 @import "./modules/form/form.scss";
 @import "./modules/global/global.scss";
 @import "./modules/card/card.scss";
