--- a/src/styles/modules/section/section.scss
+++ b/src/styles/modules/section/section.scss
@@ -13,10 +13,15 @@
       text-decoration: none;
       color: #0069d9;
     }
-    transition: all 0.3s ease-in-out;
-    &:hover {
-      letter-spacing: 4px;
-      text-decoration: none;
-    }
   }
+}
+
+.white-section {
+  background-color: #fff;
+  color: #1c1e21 !important;
+  padding: 5rem 0;
+}
+
+.enter-padding {
+  padding: 1rem 2rem;
 }
