--- a/src/styles/modules/sidebar/sidebar.scss
+++ b/src/styles/modules/sidebar/sidebar.scss
@@ -1,115 +1,66 @@
-.sidebar {
+.width-sidebar {
+  width: 16.5%;
   position: fixed;
   top: 0;
   left: 0;
-  height: 100%;
-  width: 25rem;
-  background: linear-gradient(40deg, #7873f5, #303f9f) !important;
+  height: 100vh;
+  background-color: #e9ebee;
+  padding: 0;
+  margin: 0;
+  border-right: 2px solid #fff;
+}
 
-  //logo
-
-  .sidebar-logo {
-    border-bottom: 1px solid #ddd;
-    position: relative;
-    height: 7rem;
-
-    a {
-      &:link,
-      &:focus,
-      &:visited,
-      &:active {
-        color: #fff;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        font-size: 1.5rem;
-        font-weight: 500;
-      }
-    }
-  }
-
-  & > ul {
+.sidebar {
+  ul {
     list-style: none;
-    padding: 0;
-    margin: 0;
     position: relative;
-    top: 0rem;
-    li {
-      a {
-        height: 5rem;
-        &:link,
-        &:visited,
-        &:active {
-          position: relative;
-          width: 25rem;
-          padding: 1rem;
-          padding-top: 2rem;
-          display: block;
-          color: #fff;
-          font-size: 1rem;
-          letter-spacing: 2px;
-          margin-top: 1.5rem;
-          font-weight: 300;
-        }
-        &:hover,
-        &:focus {
-          background-color: rgba(#fff, 0.2);
-          text-decoration: none;
-        }
+    top: 5rem;
+    margin: 0;
+    padding: 0;
 
-        span {
-          line-height: 1;
-          display: block;
-          width: 100%;
+    & > li {
+      margin-top: 1rem;
+      padding: 2rem 0rem 2rem 1.2rem;
+      span {
+        i.icon-nav {
+          padding-right: 1rem;
+          font-size: 2rem;
+          color: #385898;
+        }
+        i.icon-arrow {
+          font-size: 1.4rem;
+          float: right;
+          padding-right: 1rem;
         }
       }
-    }
 
-    ul {
-      list-style: none;
-      border-left: 1px solid #ddd;
-      padding: 0;
-      margin: 0;
-      margin-left: 2rem;
-      border-radius: 0.4rem;
-      & > li {
-        & > a {
-          height: 4rem;
-          &:link,
-          &:focus,
-          &:visited,
-          &:active {
-            width: 20.8rem;
-            margin-top: 1rem;
-            padding: 1rem;
+      a:link,
+      a:visited {
+        color: #1d2129;
+        width: 100%;
+        height: 100%;
+        display: inline-block;
+      }
+
+      ul {
+        top: 1rem;
+
+        li {
+          margin-top: 1rem;
+          padding: 1.5rem 0 1.5rem 1.5rem;
+          background-color: #ffffff;
+          i {
+            padding-right: 0.5rem;
           }
         }
+        li:hover {
+          background-color: #e9ebee;
+        }
       }
     }
+
+    li:hover {
+      background-color: #fff;
+    }
   }
-}
-
-.active {
-  background-color: rgba(#fff, 0.2);
-}
-
-.margin-let-de {
-  margin-left: -21px !important;
-}
-
-.fa-lg {
-  font-size: 1.5rem;
-}
-
-.text-right-icon {
-  float: right;
-  font-size: 1.5rem !important;
-  margin-top: -0.5rem;
-}
-
-.text-down-icon {
-  float: right;
-  font-size: 1.5rem !important;
-  margin-top: 0;
 }
