--- a/src/styles/modules/section/section.scss
+++ b/src/styles/modules/section/section.scss
@@ -19,7 +19,8 @@
 .white-section {
   background-color: #fff;
   color: #1c1e21 !important;
-  padding: 5rem 0;
+  padding: 4rem 0;
+  box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.1);
 }
 
 .enter-padding {
