--- a/src/styles/modules/sidebar/sidebar.scss
+++ b/src/styles/modules/sidebar/sidebar.scss
@@ -7,7 +7,7 @@
   background-color: #e9ebee;
   padding: 0;
   margin: 0;
-  border-right: 2px solid #fff;
+  box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.1);
 }
 
 .sidebar {
@@ -53,13 +53,16 @@
             padding-right: 0.5rem;
           }
         }
-        li:hover {
+        li:hover,
+        li:active {
           background-color: #e9ebee;
         }
       }
     }
 
-    li:hover {
+    li:hover,
+    li:active,
+    li:focus {
       background-color: #fff;
     }
   }
