--- a/src/styles/modules/util/util.scss
+++ b/src/styles/modules/util/util.scss
@@ -146,3 +146,36 @@ $mq-desktop: 1382px !default;
   font-weight: 700;
   text-transform: uppercase;
 }
+
+.noticeBtn {
+  &:link,
+  &:active,
+  &:visited {
+    font-size: 1.2rem;
+    display: inline-block;
+    color: #fff;
+    cursor: pointer;
+    background-color: #385898;
+    padding: 10px;
+    text-align: right;
+    margin-right: 10rem;
+    text-decoration: none;
+  }
+}
+
+.dashboard-section {
+  width: 100%;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  padding-top: 4rem;
+  li {
+    display: inline-block;
+    width: 50%;
+
+    p {
+      font-size: 5rem;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+  }
+}
