--- a/src/styles/modules/usernavbar/usernavbar.scss
+++ b/src/styles/modules/usernavbar/usernavbar.scss
@@ -21,12 +21,12 @@
     @include global {
       position: relative;
       right: 0;
-      margin-top: 3rem;
+      margin-top: 1rem;
     }
   }
 
   .dropdown-menu {
-    background-color: #4267b2;
+    background-color: #3b4d73;
     border: none;
     margin-top: 0.6rem;
     border-radius: none;
