--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -21,3 +21,6 @@
 @import "./modules/hero/hero.scss";
 @import "./modules/user-notice/user-notice.scss";
 @import "./modules/suggation/suggation.scss";
+@import "./modules/home-section/home-section.scss";
+@import "./modules/user-hall-provost/hallProvost.scss";
+@import "./modules/generic-card/generic-card.scss";
