--- a/src/styles/modules/section/section.scss
+++ b/src/styles/modules/section/section.scss
@@ -14,6 +14,20 @@
       color: #0069d9;
     }
   }
+
+  &-title-lg {
+    font-size: 2.6rem;
+    font-weight: 300;
+    border-radius: 15px;
+    word-spacing: 8px;
+    border-top: none !important;
+    background-color: #0069d9;
+    color: #fff;
+    padding: 1rem 2rem;
+    animation-name: colorchange;
+    animation-iteration-count: infinite;
+    animation-duration: 2s;
+  }
 }
 
 .white-section {
@@ -22,7 +36,49 @@
   padding: 4rem 0;
   box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.1);
 }
+.tranparent {
+  background-color: transparent;
+}
 
 .enter-padding {
   padding: 1rem 2rem;
+  position: relative;
+}
+.enter-padding-lg {
+  padding: 10rem 2rem;
+}
+.section-top-title {
+  position: absolute;
+  top: 6.5rem;
+  left: 2rem;
+  font-size: 2rem;
+  width: 25rem;
+  padding: 1.5rem 1rem;
+  border: 1px solid;
+  background-color: #fff;
+  color: #479cf8;
+  border-radius: 5px;
+  border: none;
+  text-transform: capitalize;
+  word-spacing: 10px;
+  box-shadow: 2px 1px 15px 0 rgba(0, 0, 0, 0.1);
+}
+
+@keyframes colorchange {
+  0% {
+    background: #157ff0;
+    color: #fff;
+    text-indent: -100px;
+  }
+  50% {
+    background: #fff;
+    color: #0069d9;
+    text-indent: 0;
+  }
+
+  100% {
+    background: #479cf8;
+    color: #fff;
+    text-indent: 0;
+  }
 }
