--- a/src/styles/modules/sidebar/sidebar.scss
+++ b/src/styles/modules/sidebar/sidebar.scss
@@ -17,10 +17,10 @@
     top: 5rem;
     margin: 0;
     padding: 0;
+    text-decoration: none;
 
     & > li {
-      margin-top: 1rem;
-      padding: 2rem 0rem 2rem 1.2rem;
+      margin-top: 1.5rem;
       span {
         i.icon-nav {
           padding-right: 1rem;
@@ -34,36 +34,49 @@
         }
       }
 
-      a:link,
+      & > a:link,
       a:visited {
         color: #1d2129;
         width: 100%;
         height: 100%;
         display: inline-block;
+        padding: 2rem 0rem 2rem 1.2rem;
+      }
+
+      & > a:hover {
+        text-decoration: none;
       }
 
       ul {
-        top: 1rem;
-
+        top: 0.5rem;
+        margin-top: 0rem;
+        margin-left: 1rem;
         li {
           margin-top: 1rem;
-          padding: 1.5rem 0 1.5rem 1.5rem;
-          background-color: #ffffff;
+          & > a:link,
+          a:visited {
+            width: 100%;
+            height: 100%;
+            display: inline-block;
+            padding: 1.7rem;
+            border: 1px solid rgba($color: #1a1919, $alpha: 0.2);
+            border-right: none;
+            border-left: none;
+          }
           i {
             padding-right: 0.5rem;
+            color: #385898;
           }
-        }
-        li:hover,
-        li:active {
-          background-color: #e9ebee;
+          a:hover,
+          a:active {
+            background-color: #fff;
+          }
         }
       }
     }
-
-    li:hover,
-    li:active,
-    li:focus {
-      background-color: #fff;
-    }
   }
+}
+
+.active {
+  background-color: #fff;
 }
